# OOP-Assignment-2024

./: CMakeLists.txt  Polynomial.cpp  Polynomial.h  Polynomial_copilot.cpp  Word Tic Tac Toe.h  main.cpp  my code.cpp  poly_gemini.h
A2/: 3x3X_O.h  BoardGame_Classes.h  CMakeLists.txt  main.cpp  misere.h  olemy_games.h
A2 - Final/: CMakeLists.txt  games.h  main.cpp
A2 - Final/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
A2/game 2 mazen/: hx3X_O.h  main.cpp
A2/mazen game/: hx3X_O.h  main.cpp
A2/numerical tic tac toe/: hx3X_O.h  main.cpp
Assignment 1 - olemy saving/: CMakeLists.txt  main.cpp
PyramicTTT/: Pyramic tic tac toe.h  pyramicTTT main.cpp
Task 4/: Vole.cpp  Vole.h  main.cpp  test.txt
Tasleem olemy final/: finalreport.docx  games.h  main.cpp
Word Tic Tac Toe/: words tic tac toe.h  wordsTTT main.cpp
